force-app/main/default/objects/Integration_Log__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>