force-app/main/default/objects/Integration_Log__c/fields/Cash_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Cash_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Receipt</label>
    <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>