force-app/main/default/objects/Integration_Log__c/fields/Computed_Time__c.field-meta.xml
<CustomField>
    <fullName>Computed_Time__c</fullName>
    <formula>TIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computed Time</label>
    <type>Time</type>
</CustomField>