force-app/main/default/objects/Integration_Log__c/fields/Customer_IP__c.field-meta.xml
<CustomField>
    <fullName>Customer_IP__c</fullName>
    <label>Customer IP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>