force-app/main/default/objects/Integration_Log__c/fields/Policy_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Policy_Endorsement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Endorsement</label>
    <referenceTo>Policy_Endorsement__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>