force-app/main/default/objects/Integration_Log__c/fields/Transaction_Action__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Action__c</fullName>
    <label>Transaction Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>authorize</fullName>
            </value>
            <value>
                <fullName>force</fullName>
            </value>
            <value>
                <fullName>sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>