force-app/main/default/objects/Integration_Log__c/fields/User_Session__c.field-meta.xml
<CustomField>
    <fullName>User_Session__c</fullName>
    <label>User Session</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>