force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Billing__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>