force-app/main/default/objects/Integration_Log__c/listViews/DEBUG_ACH_error.listView-meta.xml
<ListView>
    <fullName>DEBUG_ACH_error</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Billing__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processed With Errors</value>
    </filters>
    <label>DEBUG - ACH error</label>
</ListView>